Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10823

Emoji Unicode character in Windows 10 PC name stops MySQL from starting as a service

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.1.17
    • 10.1.18
    • Platform Windows
    • Computer name set to an emoji Unicode character in Windows 10 stops MySQL from starting as a service.
    • 10.1.18

    Description

      For some reason if I set the name of my computer to include characters like cats, smilies or cupcakes the MySQL service won't start.
      All MySQL distributions are affected (I tried Oracle MySQL, it has the same issue).

      How to reproduce : Change computer name to an emoji character, reboot and then try to start mysql with *net start mysql *

      Btw. even Jira doesn't support emoji.

      Attachments

        Activity

          There are no comments yet on this issue.

          People

            wlad Vladislav Vaintroub
            isti37 Fulop Istvan
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.